--- a/src/containers/Buyer/home/home.css
+++ b/src/containers/Buyer/home/home.css
@@ -1,4 +1,4 @@
-/* .wrapper{
+.wrapper{
     width:500vw;
     height:100vh;
     position: fixed;
@@ -25,6 +25,4 @@
 @keyframes wave{
     from {transform: rotate(0deg);}
     from {transform: rotate(360deg);}
-} */
-
-
+}
