--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,11 +1,7 @@
-body{
-    position: relative;
-}
-
 footer{
-    margin: 5px;
-    position:absolute;
-    top:100vh;
+    margin-top: 20%;
+    position:static;
+    bottom: 0;
     width:100%;
 
 }
